@@ -1,6 +1,5 @@
 package org.bardframework.commons.utils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
@@ -40,10 +39,6 @@ public final class EncodingUtils {
     }
 
     public static String urlEncode(String value) {
-        try {
-            return URLEncoder.encode(value, StandardCharsets.UTF_8.name());
-        } catch (UnsupportedEncodingException e) {
-            throw new IllegalArgumentException(e);
-        }
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 }
